--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="files/images/favicon-32x32.png">
+  <link rel="stylesheet" href="files/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fraunces">
 
@@ -34,10 +34,10 @@
 
               <p id="title">PERFUME</p>
 
-              <h1 id="main-copy">Gabrielle <br> Essence Eau<br> De Parfum</h1>
+              <h1 id="main-copy">Gabrielle Essence Eau De Parfum</h1>
 
-              <p id="copy">A floral, solar and voluptuous <br> interpretation composed by <br>Olivier Polge, 
-              Perfumer-Creator<br> for the House of CHANEL.</p>
+              <p id="copy">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+              Perfumer-Creator for the House of CHANEL.</p>
 
              <div class="prices"><b><h1 id="price">$149.99</h1></b><p id="price-slash">$169.99</p></div>
              
