--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <p class="copy">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
               Perfumer-Creator for the House of CHANEL.</p>
 
-             <div class="prices"><p class="price">$149.99</p><a class="ar-only" href="The previous price was…"></a><del class="price-slash">$169.99</del></div>
+             <div class="prices"><p class="price">$149.99</p><a class="sr-only" href="The previous price was…"></a><del class="price-slash">$169.99</del></div>
              
            </div>
 
